# CRISPR-Correct

./: .gitignore  20241011_CRISPR_Correct_CD19Demo.ipynb  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md
crispr-ambiguous-mapping/: Dockerfile  mypy.ini  pyproject.toml
crispr-ambiguous-mapping/crispr_ambiguous_mapping/: __init__.py  api.py  cli.py
crispr-ambiguous-mapping/crispr_ambiguous_mapping/framework/: CrisprAmbiguousMapping.py  CrisprEditingProcessing.py
crispr-ambiguous-mapping/crispr_ambiguous_mapping/mapping/: __init__.py  guide_counting.py  guide_inference.py  guide_raw_fastq_parsing.py  main_mapping.py  mapping.py  models.py  reporter_tsv_parsing.py  reporter_umitools_fastq_parsing.py  sequence_encoding.py
crispr-ambiguous-mapping/crispr_ambiguous_mapping/models/: __init__.py  editing_models.py  error_models.py  mapping_models.py  quality_control_models.py  types.py
crispr-ambiguous-mapping/crispr_ambiguous_mapping/parsing/: __init__.py  guide_raw_fastq_parsing.py  reporter_standard_fastq_parsing.py  reporter_tsv_parsing.py  reporter_umitools_fastq_parsing.py
crispr-ambiguous-mapping/crispr_ambiguous_mapping/postprocessing/: __init__.py  crispr_editing_processing.py  prepare_anndata.py
crispr-ambiguous-mapping/crispr_ambiguous_mapping/processing/: __init__.py  crispr_count_processing.py  crispr_editing_processing.py  crispr_guide_counting.py  crispr_guide_inference.py  crispr_sequence_encoding.py
crispr-ambiguous-mapping/crispr_ambiguous_mapping/quality_control/: __init__.py  crispr_count_series_quality_control.py  crispr_mapping_quality_control.py
crispr-ambiguous-mapping/crispr_ambiguous_mapping/utility/: __init__.py  bam2fastq.py  crispr_editing_utility.py  crispr_parsing_utility.py  pickle_loading.py
crispr-ambiguous-mapping/crispr_ambiguous_mapping/visualization/: __init__.py  (+1 more)
crispr-ambiguous-mapping/crispr_correct/: __init__.py
crispr-ambiguous-mapping/tests/: test_simulation.py  test_simulation_e2e.py  test_smoke.py
(+10 files in other folders)
